--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,14 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-mocks": "~1.2.x",
-    "bootstrap": "~3.1.1",
     "angular-route": "~1.2.x",
     "angular-resource": "~1.2.x",
     "jquery": "1.10.2",
     "angular-animate": "~1.2.x",
     "momentjs": "~2.6.0",
-    "angular-moment": "~0.7.1"
+    "angular-moment": "~0.7.1",
+    "foundation": "~5.3.0",
+    "ngInfiniteScroll": "~1.1.2",
+    "open-iconic": "~1.1.0"
   }
 }
